--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap');
+
 li {
     list-style: none;
+}
+
+body {
+    font-family: Quicksand;
+}
+
+nav a {
+    font-size: 18px;
+    font-weight: 400;
+    text-decoration: none;
+}
+
+nav a:hover {
+    font-weight: bold;
+}
+
+h2 {
+    color: #00a2c6
+}
+  
+h3 {
+    color: #00a2c6
+}
+
+.profile header {
+    text-align: center;
+}
+
+.content p {
+    text-align: justify;
+    max-width: 800px;
+}
+
+footer {
+    padding: 20px;
+    color: white;
+    background-color: #00a2c6;
+    text-align: center;
+    font-weight: bold;
 }
