--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,9 @@ li {
 }
 
 body {
-    font-family: Quicksand;
+    font-family: 'Quicksand', sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 nav a {
@@ -26,13 +28,38 @@ h3 {
     color: #00a2c6
 }
 
+header .jumbotron {
+    font-size: 20px;
+    padding: 60px;
+    background-color: #00c8eb;
+    text-align: center;
+    color: white;
+}
+
+nav {
+    background-color: #00a2c6;
+    padding: 5px;
+}
+
+nav a {
+    font-size: 18px;
+    font-weight: 400;
+    text-decoration: none;
+    color: white;
+}
+
+nav li {
+    display: inline;
+    list-style-type: none;
+    margin-right: 20px;
+}
 .profile header {
     text-align: center;
 }
 
 .content p {
     text-align: justify;
-    max-width: 800px;
+    max-width: 100%;
 }
 
 footer {
@@ -41,4 +68,22 @@ footer {
     background-color: #00a2c6;
     text-align: center;
     font-weight: bold;
+}
+
+.content .featured-image {
+    width: 100%;
+    max-height: 300px;
+    object-fit: cover;
+    object-position: center;
+}
+
+aside .profile .profile-img {
+    width: 200px;
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    padding: 20px;
+    margin-top: 20px;
 }
